Changes towards version 0.7:
- Process subtitles correctly with no timestamp file (bug #1060) - Alex
- Lander will no longer hang when killed on planets with a lot of
  natural disasters (bug #584) - Alex
- Canceling load from the main menu returns to main menu (bug #679) - Alex
- Fixed inputting numbers with the numpad, except directx (bug #934) - Alex
- Better location description in savegame summaries (bug #844) - Alex
- Fixed crash when saving a game into the last slot while having
  too many devices on board - Alex
- Allow any sound data format to be graphed by comm oscilloscope; also
  auto-adjust the scope for different gain levels (bug #1064) - Alex
- Game settings Quit menu now delegates to F10 quit (bug #462) - Alex
- Do not pause the game in places where not relevant (bug #984) - Alex
- Fixed crashes and potential weirdness when loading savegames from
  a Homeworld encounter screen (bug #997) - Alex
- Cleanup of GLOBAL(ShipStamp.frame) abuse; fixes bug #1054 - Alex
- Game attempts to exit cleanly under normal circustances (bug #52) - Alex
- Fixed Mmrnmhrm's X-Form transformation without energy use (bug #1004) - Alex
- Added missing sleeps in DoInput() functions (bug #893) - Alex
- Starmap unit conversion corrections; fixes bug #970 - Alex
- Rounding-error correction in log(x|y)ToUniverse (bug #1046), from Nic
- Change hardcoded Starbase and Sa-Matra values to pretty enum values
  (bug #1047), from Nic
- Load override.cfg from user's dir to add or override menu controls - Alex
- Allow addons to override any content by placing zips into their
  'shadow-content' dir - Alex
- Content reorg: font chars now use hexadecimal numbering - Alex
- Content reorg: some race comm and ships renamed, ship files renamed,
  many ani files renamed, new naming scheme for ani frames and voice - Alex
- .cfg files are now kept as subtrees of the resource map - Michael
- Flight control data no longer unnecessarily copied to config directory - Michael